fix unnecessary whitespace when copying values from session table

--- a/viewer/app/modules/session/styles/session.field.scss
+++ b/viewer/app/modules/session/styles/session.field.scss
@@ -30,6 +30,13 @@ session-field {
       color           : lighten($color-black, 10%);
       text-decoration : none;
 
+      .all-copy {
+        -webkit-user-select: all;
+           -moz-user-select: all;
+            -ms-user-select: all;
+                user-select: all;
+      }
+
       .fa {
         opacity     : 0;
         visibility  : hidden;
